--- a/index.html
+++ b/index.html
@@ -50,6 +50,35 @@
     </header>
     <main>
 
+
+ <section class="hero">
+        <div class="hero-content">
+            <h1>Tu éxito online<br>empieza acá</h1>
+            <p>En Hostinger obtenés todo lo necesario. Desde armar tu web hasta hacer crecer tu proyecto.</p>
+            <button class="cta-btn">Empezar ya</button>
+        </div>
+
+        <div class="hero-image">
+            <img src="https://imagedelivery.net/LqiWLm-3MGbYHtFuUbcBtA/acd9c2a1-5eee-4564-d38f-5071c6d83f00/w=1760,sharpen=1" alt="modelo hostinger" class="main-img">
+
+            <div class="card card-top">
+                <p><strong>www.tuidea</strong><br>.online<br>.com<br>.ai</p>
+            </div>
+
+            <div class="card card-middle">
+                <h2>luz<br>propia</h2>
+            </div>
+
+            
+        </div>
+    </section>
+
+
+
+</section>
+
+
+
         <section class="mails-section bg-neutral-100">
             <div class="section-content">
                 <div class="section-header">
